--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Hello world!</h1>
+   <p>This is the first file in my new Git Repo.</p>
 <p>This is the first file in my new Git Repo.</p>
 </body>
 </html>
