--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <title>Document</title>
+   <link rel="stylesheet" href="./bluestyle.css"/>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="./bluestyle.css"/>
 </head>
 <body>
    <h1>Hello world!</h1>
    <div><img src="img_hello_world.jpg" alt="Hello World from Space"
       style="width:100%;max-width:960px"></div>
    <p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
+   <p>This line is here to show how merging works.</p>
+    <h1>Hello world!</h1>
+    <div><img src="img_hello_world.jpg" alt="Hello World from Space"
+      style="width:100%;max-width:960px"></div>
+   <p>This is the first file in my new Git Repo.</p>
+   <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello World from Space"
    style="width:100%;max-width:960px"></div>
 </body>
